--- a/dev/less/common.less
+++ b/dev/less/common.less
@@ -755,6 +755,8 @@ ul {
     cursor: grab;
     cursor: -webkit-grab;
 }
+
+// 产品详情swiper start
 #products_detail .swiper-container {
     @media (min-width: 1200px) {
         width: 440px;
@@ -807,6 +809,8 @@ ul {
         right: 15px;
     }
 }
+// 产品详情swiper end
+
 .products_detail_top_info {
     @media (min-width: 992px) {
         padding: 0 20px;
@@ -1033,6 +1037,8 @@ h1.news_detail_title {
 .contact_map {
     margin-bottom: 20px;
 }
+
+// 百度地图模块
 #contact_map_baidumap {
     height: 500px;
     @media (max-width: 991px) {
